Made some great changes in style.css by solving an issue with the image and text no aligning.

--- a/style.css
+++ b/style.css
@@ -94,15 +94,19 @@ ul, li {
   background-color: #ffff;
   font-size: 30px;
   font-weight: 900;
-  padding: 30px;
+  padding: 40px;
+}
+
+.imgsText {
+  max-width: 140px;
 }
 
 .info {
   background-color: #ffff;
   display: flex;
   justify-content: center;
-  gap: 52px;
-  padding: 15px;
+  gap: 40px;
+  padding-bottom: 80px;
 }
 
 .img {
@@ -125,8 +129,13 @@ ul, li {
 
 .textMid2 {
   font-size: 32px;
-  min-width: 100;
+  text-align: start;
+  font-style: italic;
 }
 
 .Signature {
+  text-align: right;
+  padding-right: 20px;
+  font-size: 20px;
+  font-weight: bolder;
 }
